--- a/BulkyWeb/appsettings.Production.json
+++ b/BulkyWeb/appsettings.Production.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=BulkyDB;User Id=sa;Password=Vamshi@251198;TrustServerCertificate=True"
+    "DefaultConnection": ""
   },
   "Stripe": {
     "SecretKey": "YOUR_STRIPE_SECRET_KEY",
